src/rebel.h

void RebelInit(unsigned int windowWidth, unsigned int windowHeight, const char* windowName);
void RebelDestroy();
void InputProcess();
Camera* CameraGetMain();