src/core/window.h

unsigned int WindowCanClose();
void WindowClear();
void WindowSwap();
void WindowDestroy();